<resources>
    <string name="app_name">Urja \'20</string>
    <string name="title_activity_home">Urja \'20</string>
    <string name="title_events">Events</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_about_us">About Us</string>
    <string name="title_live">Live</string>
    <string name="title_more">More</string>


    <!--whatsapp-->
    <!-- Content description for the sticker pack tray image -->
    <string name="tray_image_content_description">Sticker Pack Tray Image</string>
    <!-- the title of info button in the menu that takes the user to more information about that pack showing publisher website and so on -->
    <string name="more_info_button">More info about sticker pack</string>
    <!-- Text to be shown on the button that user can click to add the sticker pack to WhatsApp -->
    <string name="add_to_whatsapp">Add to WhatsApp</string>
    <!-- Content Description for the plus button shown on sticker pack list, that allows user to add sticker pack to WhatsApp -->
    <string name="add_button_content_description">Add sticker pack to WhatsApp</string>
    <!-- Title of the sticker pack list activity page in case the app contains multiple sticker packs -->
    <string name="title_activity_sticker_packs_list">Sticker Packs</string>
    <!-- The divider between sticker pack publisher and the sticker pack size -->
    <string name="dot">•</string>
    <!-- Title of the sticker pack page when there is only one sticker pack in the app -->
    <string name="title_activity_sticker_pack_details_single_pack">Sticker Pack</string>
    <!-- Title of the sticker pack page when there are multiple sticker packs in the app -->
    <string name="title_activity_sticker_pack_details_multiple_pack">Sticker details</string>
    <!-- Title of the sticker pack info page which displays the webpage, email and privacy policy of the sticker pack -->
    <string name="title_activity_sticker_pack_info">Info</string>
    <!-- Text of button that allows user to click to go to the webpage of the publisher -->
    <string name="view_webpage">View webpage</string>
    <!-- Text of button that allows user to click to send an email -->
    <string name="send_email">Send email</string>
    <!-- Text of button that allows user to click to go to the privacy policy website -->
    <string name="privacy_policy">Privacy policy</string>
    <!-- Error displayed in a toast when user failed to install sticker pack to WhatsApp -->
    <string name="error_adding_sticker_pack">Could not add this sticker pack. Update to the latest version of WhatsApp before adding this sticker pack.</string>
    <string name="error_message">Error: %s \nSee logcat for stack trace.</string>
    <string name="title_validation_error">Error with the pack</string>
    <!-- Text next to the tray icon that indicates the tray icon -->
    <string name="info_screen_tray_icon">Tray icon</string>
    <!-- Text shown to the user instead of Add to WhatsApp button if the pack is already added to WhatsApp -->
    <string name="details_pack_already_added">Sticker pack added to WhatsApp</string>
    <!-- Title in the intent chooser that shows when user has multiple email client installed -->
    <string name="info_send_email_to_prompt">Send email with</string>
    <!-- Message to show in a dialog when user fails to add sticker pack -->
    <string name="add_pack_fail_prompt_update_whatsapp">Sticker pack not added. If you\'d like to add it, make sure you update to the latest version of WhatsApp.</string>
    <!-- Text in dialog button when a user has an old version of WhatsApp that prevents them from adding the sticker pack, clicking on it will take user to play store -->
    <string name="add_pack_fail_prompt_update_play_link">Update</string>
    <!-- Toast text when we could not take user to play store because they don't have Google Play app installed -->
    <string name="cannot_find_play_store">Google Play is not installed on the device.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
