<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_events"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/ic_leaderboard"
        android:title="@string/title_leaderboard" />

    <item
        android:id="@+id/navigation_live"
        android:icon="@drawable/ic_live"
        android:title="@string/title_live" />

    <item
        android:id="@+id/navigation_about_us"
        android:icon="@drawable/ic_about_us"
        android:title="@string/title_about_us" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more" />

</menu>
